Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75392

Segmentation fault in Release mode for QTQuick Applications

XMLWordPrintable

    • Linux/Other display system
    • 3df85008591dffc64427095b022421469cb9a866 (qt/qtdeclarative/5.12)

      For QML based applications, when compiled in release mode, Segmentation faults are observed. The same works fine in debug mode.

      This has been observed specifically for the following components:

      • Slider
      • Video
      • Label

      the backtrace points to the following function:

      void QmlUnitGenerator::generate(Document &output, const QV4::CompiledData::DependentTypesHasher &dependencyHasher)

      The application specific QML files are interpreted correctly by the Interpreter. However the inbuilt QML components like the slider are not interpreted.

       

      The compiler settings are as below:

       For Release mode

      App.pro -spec /path/to/toolchain/usr/lib/qt5/mkspecs/linux-oe-g++ CONFIG+=qtquickcompiler && /usr/bin/make qmake_all

       For Debug mode

       App.pro -spec /path/to/toolchain/usr/lib/qt5/mkspecs/linux-oe-g++ CONFIG+=debug CONFIG+=qml_debug && /usr/bin/make qmake_all

       

       We are using the Yocto build system and release configuration.

       

       

       

       

       

       

        1. backtrace.png
          backtrace.png
          99 kB
        2. Qt-backtrace.png
          Qt-backtrace.png
          147 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            naveenchandra Naveenchandra Hande
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes