Avoid std::function in qqmlirbuilder.cpp

Some compilers seem to miscompile this construction. Furthermore, it
doesn't really add to the readability of the code. Inline the code in
question at the only place it's used and avoid most of the const_cast by
adding a non-const accessor to CompiledData::Unit.

Fixes: QTBUG-75392
Change-Id: I015317f28a92817d08d616cc35956745758d7847
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>